# IUM

./: .deepsource.toml  LICENSE  README.md  pyproject.toml  server.py
assets/css/: segnalazioni.css  style.css
assets/js/: centro.js  customScripts.js  endpoints.js  forze.js  moment.js  segnalazione.js  segnalazioni.js
docs/: Assignment#1.docx
docs/Assignment#1/: Assignment#1.docx  QuestionariUtenti.xlsx
docs/Assignment#2/: Assignment#2.docx
docs/Assignment#3/: Assignment#3.docx  IUM_low-fi.xd
docs/Assignment#4/: Assignment#4.docx  QuestionariUtenti.xlsx
static/js/: script.js  test.js
templates/: centro.html  endpoints.html  error.html  forze.html  index.html  login.html  registrazione.html  segnalazioni.html  test.html
